--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,8 @@ a:hover {
 }
 html {
   font-size: 10px;
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: 400 !important;
 }
 /* .row{
   margin: 0;
