--- a/src/assets/styles/Variable.css
+++ b/src/assets/styles/Variable.css
@@ -1,7 +1,7 @@
 :root {
   --primary_color: #f26b38;
-  --secondary_color: "#1352a5";
-  --sub_text_color: "#a0a3a7";
+  --secondary_color: #1352a5;
+  --sub_text_color: #a0a3a7;
   --background_dark: black;
   
   --mobile_screen: 768px;
