init basic layout for checkout page

--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,10 @@ html {
   padding: 0;
 } */
 
+.primary_color {
+  color: var(--primary_color);
+}
+
 .ant-carousel .slick-dots {
   margin: 0 !important;
 }
