--- a/src/assets/styles/HomeMovieList/HomeMovieList.module.css
+++ b/src/assets/styles/HomeMovieList/HomeMovieList.module.css
@@ -97,10 +97,11 @@
     border: none;
     border-radius: 0 0 5px 5px;
     transform: translateY(5px);
+    outline: none !important;
 }
 
 .title_movie {
-    height: 70px;
+    height: 80px;
     overflow-y: hidden;
 }
 
