--- a/src/assets/styles/Checkout/Checkout.css
+++ b/src/assets/styles/Checkout/Checkout.css
@@ -20,8 +20,14 @@
 .gheVip {
   background-color: var(--primary_color);
 }
-.seat_container{
-    margin-top: 100px;
+.gheMinhDat {
+  background-color: orange;
+  color: white;
+  -webkit-box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.5);
+}
+.seat_container {
+  margin-top: 100px;
 }
 
 @media only screen and (max-width: 768px) {
