--- a/src/assets/styles/Checkout/Checkout.module.css
+++ b/src/assets/styles/Checkout/Checkout.module.css
@@ -19,8 +19,8 @@
 
 /* SIDE_INFO */
 .side_info {
-  -webkit-box-shadow: -10px 0px 40px -5px #3d3d3d;
-  box-shadow: -10px 0px 40px -5px #3d3d3d;
+  -webkit-box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.65); 
+box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.65);
 }
 .side_info p{
   margin: 0;
@@ -32,4 +32,9 @@
   font-size: 3rem;
   margin: 0;
   color: var(--primary_color);
+}
+
+/* TAB */
+.tabCheckOut :global(.ant-tabs-nav){
+  margin: 0px !important;
 }
