--- a/src/assets/styles/Checkout/Checkout.module.css
+++ b/src/assets/styles/Checkout/Checkout.module.css
@@ -35,6 +35,18 @@ box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.65);
 }
 
 /* TAB */
+.tabCheckOut{
+  position: relative;
+}
 .tabCheckOut :global(.ant-tabs-nav){
   margin: 0px !important;
+}
+.tabCheckOut :global(.ant-tabs-nav-wrap){
+  padding: 20px !important;
+}
+.tabCheckOut_backHome{
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  z-index: 1;
 }
