--- a/src/assets/styles/Checkout/Checkout.module.css
+++ b/src/assets/styles/Checkout/Checkout.module.css
@@ -33,6 +33,11 @@ box-shadow: -2px 10px 20px 0px rgba(0,0,0,0.65);
   margin: 0;
   color: var(--primary_color);
 }
+@media only screen and (max-width: 992px) {
+  .side_info h3{
+    font-size: 2rem;
+  }
+}
 
 /* TAB */
 .tabCheckOut{
