--- a/src/assets/styles/DetailInfo/DetailInfo.module.css
+++ b/src/assets/styles/DetailInfo/DetailInfo.module.css
@@ -101,3 +101,23 @@
 /* .movie_tab{
 
 } */
+@media only screen and (max-width: 768px) {
+  .row_rating {
+    display: flex;
+    justify-content: center;
+  }
+  .movieInfo{
+    width: 100%;
+    justify-content: center;
+  }
+  .movieInfo_content{
+    padding: 0px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .row_rating {
+    display: block;
+  }
+
+}
+
