--- a/src/assets/styles/Checkout/Checkout.css
+++ b/src/assets/styles/Checkout/Checkout.css
@@ -30,7 +30,7 @@
   background-color: var(--primary_color);
 }
 .gheMinhDat {
-  background-color: orange;
+  background-color: orange !important;
   color: white;
   -webkit-box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.5);
